--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "homepage": "https://github.com/jonnzer/Jonnzer-project-template#readme",
   "bin": {
-    "jz-temp": "bin/index.js",
-    "jz-cli": "bin/index.js",
-    "jz": "bin/index.js"
+    "JZ-temp": "bin/index.js",
+    "JZ-cli": "bin/index.js",
+    "JZ": "bin/index.js"
   },
   "dependencies": {
     "chalk": "^3.0.0",
@@ -40,7 +40,12 @@
   "devDependencies": {
     "chalk": "^3.0.0",
     "commander": "^5.0.0",
+    "del": "^6.0.0",
+    "download-git-repo": "^3.0.2",
+    "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3",
-    "fs-extra": "^9.0.1"
+    "log-symbols": "^3.0.0",
+    "mvdir": "^1.0.21",
+    "ora": "^4.1.1"
   }
 }
