--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jz-temp-cli",
   "version": "0.0.1",
-  "description": "一款以vue+Ts技术为主，包括PC、H5、小程序、Electron的脚手架",
+  "description": "一款以node技术为主，包括PC、H5、小程序、Electron的脚手架",
   "main": "bin/index.js",
   "scripts": {
     "test": "node bin/index.js"
